// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Button Outline danger renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-danger btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline dark renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-dark btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline info renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-info btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline light renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-light btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline link renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-link btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline primary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-primary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline secondary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-secondary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline success renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-success btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline warning renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-warning btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button danger renders correctly 1`] = `
<jest>
  <button
    class="btn btn-danger btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button dark renders correctly 1`] = `
<jest>
  <button
    class="btn btn-dark btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button info renders correctly 1`] = `
<jest>
  <button
    class="btn btn-info btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button lg renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-lg"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button light renders correctly 1`] = `
<jest>
  <button
    class="btn btn-light btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button link renders correctly 1`] = `
<jest>
  <button
    class="btn btn-link btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button md renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button primary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button secondary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-secondary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button sm renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-sm"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button success renders correctly 1`] = `
<jest>
  <button
    class="btn btn-success btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button warning renders correctly 1`] = `
<jest>
  <button
    class="btn btn-warning btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button with icon renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Label
    <svg
      class="bi icon--s icon--rotate-90"
    >
      <use
        xlink:href="bootstrap-icons.svg#mouse"
      />
    </svg>
  </button>
</jest>
`;

exports[`OE - Button with popover renders correctly 1`] = `
<jest>
  <button
    autocomplete="off"
    class="btn btn-primary btn-md"
    data-bs-content="This is a popover"
    data-bs-placement="top"
    data-bs-toggle="popover"
    data-bs-trigger="focus"
    title="This is a title of popover"
    type="button"
  >
    Button with popover
  </button>
</jest>
`;

exports[`OE - Button with spinner renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    <div
      class="spinner-border spinner-border-sm text-info me-1"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
    Label
  </button>
</jest>
`;

exports[`OE - Button with toggle renders correctly 1`] = `
<jest>
  <button
    aria-controls="collapseExample"
    aria-expanded="false"
    autocomplete="off"
    class="btn btn-primary btn-md"
    data-bs-target="#collapseExample"
    data-bs-toggle="collapse"
    type="button"
  >
    Button with collapse
  </button>
</jest>
`;

exports[`OE - Button with tooltip renders correctly 1`] = `
<jest>
  <button
    autocomplete="off"
    class="btn btn-primary btn-md"
    data-bs-placement="bottom"
    data-bs-toggle="tooltip"
    title="This is a tooltip"
    type="button"
  >
    Button with tooltip
  </button>
</jest>
`;
